--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
     <div class="hero">
       <div class="card">
         <h1>
-          Halo, aku
-          <span style="background:linear-gradient(135deg,var(--blue),var(--pink)); -webkit-background-clip:text; background-clip:text; color:transparent;">Cyizzie</span>
-          🌸<br/>
-          bikin hal-hal imut tapi rapi.
-        </h1>
-        <p class="subtitle">
-          Selamat datang di portoku! Tema pastel biru–pink, clean, dan lucu.
-          Klik Projects buat lihat karya-karyaku.
-        </p>
+            Halo, aku
+            <span style="background:linear-gradient(135deg,var(--blue),var(--pink));
+            -webkit-background-clip:text; background-clip:text; color:transparent;">
+                Cyizzie
+            </span>
+            🌸<br/>
+            </h1>
+            <p class="subtitle">
+            Portofolio ini menampilkan karya pilihan yang mengutamakan
+            kerapian, kenyamanan pengguna, dan harmoni visual
+            dalam balutan warna pastel.
+            </p>
+
 
         <div class="pill-row">
           <div class="pill"><b>💻</b> Web / Bot</div>
