--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             🌸<br/>
             </h1>
             <p class="subtitle">
-            Portofolio ini menampilkan karya pilihan yang mengutamakan
-            kerapian, kenyamanan pengguna, dan harmoni visual
-            dalam balutan warna pastel.
+            Portofolio ini menampilkan eksplorasi web, antarmuka pengguna,
+            serta proyek digital yang dikembangkan dengan pendekatan
+            sederhana, konsisten, dan bernuansa pastel yang lembut.
             </p>
 
 
@@ -51,7 +51,7 @@
           <div class="pill"><b>✨</b> UI Cute</div>
         </div>
 
-        <div style="display:flex; gap:10px; flex-wrap:wrap; margin-top:18px; align-items:center;">
+        <div class="cta-row">
           <a class="btn primary" href="projects.html">Lihat Projects ➜</a>
           <button class="btn ghost" id="copyEmail" data-email="morgan@email.com" type="button">Copy Email 📩</button>
           <a class="btn ghost" href="contact.html">Ngobrol Yuk ☁️</a>
