--- a/about.html
+++ b/about.html
@@ -41,18 +41,21 @@
     </div>
 
     <div class="card">
-      <p style="margin:0; color:var(--muted); line-height:1.9; font-weight:700;">
-        <p>
- <p>
-  Aku adalah mahasiswa jurusan <b>Informatika</b> yang tertarik pada pengembangan perangkat lunak, khususnya pada bidang pengembangan web dan antarmuka pengguna. Selama menjalani perkuliahan, aku mempelajari berbagai konsep dasar seperti algoritma, struktur data, basis data, serta pemrograman web sebagai bekal dalam membangun aplikasi yang terstruktur.
-</p>
-<p>
-  Selain aktivitas akademik, aku juga mengembangkan kemampuan secara mandiri melalui pembuatan berbagai proyek web dan bot Discord. Proses ini membantuku memahami penerapan teori ke dalam praktik, sekaligus melatih kepekaan terhadap pengalaman pengguna dan desain antarmuka.
-</p>
-<p>
-  Dalam setiap proyek, aku berusaha menjaga keseimbangan antara fungsionalitas, keterbacaan kode, dan estetika visual agar produk yang dihasilkan tidak hanya berjalan dengan baik, tetapi juga nyaman digunakan.
-</p>
-      </p>
+  <h2 style="margin:0 0 10px; font-size:20px;">Bio</h2>
+
+  <div class="bio">
+    <p>
+      Aku mahasiswa <b>Informatika</b> yang fokus pada pengembangan web dan UI.
+      Aku suka bikin produk yang rapi secara struktur, tapi tetap lembut secara visual.
+    </p>
+
+    <p>
+      Selain kuliah, aku mengembangkan proyek mandiri seperti website portfolio dan bot Discord.
+    </p>
+
+    <p>
+      Prinsipku sederhana: <b>jelas, konsisten, dan nyaman dipakai</b>.
+    </p>
 
       <div class="section-title" style="margin-top:18px">
         <h2 style="font-size:16px">What I Do</h2>
