--- a/about.html
+++ b/about.html
@@ -23,6 +23,11 @@
         <a class="chip" data-nav="projects" href="projects.html">Projects</a>
         <a class="chip" data-nav="about" href="about.html">About</a>
         <a class="chip primary" data-nav="contact" href="contact.html">Contact ✨</a>
+
+        <!-- Dark mode toggle -->
+        <button class="chip chip-toggle" id="themeToggle" type="button" aria-label="Toggle dark mode">
+          🌙
+        </button>
       </nav>
     </div>
   </header>
@@ -41,7 +46,7 @@
     </div>
 
     <div class="card">
-  <h2 style="margin:0 0 10px; font-size:20px;">Bio</h2>
+  <h2 style="margin:0 0 10px; font-size:20px;"></h2>
 
   <div class="bio">
     <p>
@@ -57,10 +62,18 @@
       Prinsipku sederhana: <b>jelas, konsisten, dan nyaman dipakai</b>.
     </p>
 
+        <div class="bio-tags">
+      <span class="tag">Web Dev</span>
+      <span class="tag">UI / UX</span>
+      <span class="tag">Discord Bot</span>
+      <span class="tag">Automation</span>
+    </div>
+
+
       <div class="section-title" style="margin-top:18px">
         <h2 style="font-size:16px">What I Do</h2>
         <div class="hint">fokus utama</div>
       </div>
 
       <div class="skills">
-        <div class="bar"><div class="name">Frontend</div><div class="meter" style="--w:82%"><i></i
+        <div class="bar"><div class="name">Frontend</div><div class="meter" style="--w:85%"><i></i
