--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,10 @@
         <a class="chip" data-nav="projects" href="projects.html">Projects</a>
         <a class="chip" data-nav="about" href="about.html">About</a>
         <a class="chip primary" data-nav="contact" href="contact.html">Contact ✨</a>
+        <!-- Dark mode toggle -->
+        <button class="chip chip-toggle" id="themeToggle" type="button" aria-label="Toggle dark mode">
+          🌙
+        </button>
       </nav>
     </div>
   </header>
