--- a/about.html
+++ b/about.html
@@ -3,77 +3,106 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>About • Porto Lucu</title>
+  <title>About • Cyizzie</title>
   <link rel="stylesheet" href="assets/style.css" />
 </head>
+
 <body data-page="about">
   <div class="blob b1"></div><div class="blob b2"></div><div class="blob b3"></div>
 
   <header>
     <div class="nav">
-      <a class="brand" href="index.html">
+      <a class="brand" href="index.html" aria-label="Home">
         <div class="logo"><span>🎀</span></div>
         <div>
           <div style="font-size:14px; opacity:.85;">Cyizzie — Personal Website</div>
           <div style="font-size:12px; color:var(--muted); font-weight:800;">Welcome to my porto</div>
         </div>
       </a>
-      <nav class="links">
+
+      <nav class="links" aria-label="Navigation">
         <a class="chip" data-nav="home" href="index.html">Home</a>
         <a class="chip" data-nav="projects" href="projects.html">Projects</a>
         <a class="chip" data-nav="about" href="about.html">About</a>
-        <a class="chip primary" data-nav="contact" href="contact.html">Contact ✨</a>
+        <a class="chip" data-nav="contact" href="contact.html">Contact ✨</a>
 
         <!-- Dark mode toggle -->
-        <button class="chip chip-toggle" id="themeToggle" type="button" aria-label="Toggle dark mode">
-          🌙
-        </button>
+        <button class="chip chip-toggle" id="themeToggle" type="button" aria-label="Toggle dark mode">🌙</button>
       </nav>
     </div>
   </header>
 
   <main class="wrap">
-    <div class="card">
+    <div class="card fade-up">
       <h1>About Me 🌷</h1>
       <p class="subtitle">
-    
+        Sedikit cerita tentang aku, hal yang aku suka bangun, dan fokus yang lagi aku kembangin.
       </p>
     </div>
 
-    <div class="section-title">
+    <div class="section-title fade-up" style="animation-delay:.06s">
       <h2>Bio</h2>
-      <div class="hint"></div>
+      <div class="hint">ringkas & jelas</div>
     </div>
 
-    <div class="card">
-  <h2 style="margin:0 0 10px; font-size:20px;"></h2>
+    <div class="card fade-up" style="animation-delay:.10s">
+      <div class="bio">
+        <p>
+          Aku mahasiswa <b>Informatika</b> yang fokus pada pengembangan web dan UI.
+          Aku suka bikin produk yang rapi secara struktur, tapi tetap lembut secara visual.
+        </p>
 
-  <div class="bio">
-    <p>
-      Aku mahasiswa <b>Informatika</b> yang fokus pada pengembangan web dan UI.
-      Aku suka bikin produk yang rapi secara struktur, tapi tetap lembut secara visual.
-    </p>
+        <p>
+          Selain kuliah, aku mengembangkan proyek mandiri seperti website portfolio dan bot Discord
+          (termasuk <b>Cyizzie Bot</b> untuk membantu kebutuhan jualan dan otomatisasi).
+        </p>
 
-    <p>
-      Selain kuliah, aku mengembangkan proyek mandiri seperti website portfolio dan bot Discord.
-    </p>
-
-    <p>
-      Prinsipku sederhana: <b>jelas, konsisten, dan nyaman dipakai</b>.
-    </p>
+        <p>
+          Prinsipku sederhana: <b>jelas, konsisten, dan nyaman dipakai</b>.
+        </p>
 
         <div class="bio-tags">
-      <span class="tag">Web Dev</span>
-      <span class="tag">UI / UX</span>
-      <span class="tag">Discord Bot</span>
-      <span class="tag">Automation</span>
+          <span class="tag">Web Dev</span>
+          <span class="tag">UI / UX</span>
+          <span class="tag">Discord Bot</span>
+          <span class="tag">Automation</span>
+        </div>
+      </div>
     </div>
 
+    <div class="section-title fade-up" style="animation-delay:.14s">
+      <h2>What I Do</h2>
+      <div class="hint">fokus utama</div>
+    </div>
 
-      <div class="section-title" style="margin-top:18px">
-        <h2 style="font-size:16px">What I Do</h2>
-        <div class="hint">fokus utama</div>
-      </div>
-
+    <div class="card fade-up" style="animation-delay:.18s">
       <div class="skills">
-        <div class="bar"><div class="name">Frontend</div><div class="meter" style="--w:85%"><i></i
+        <div class="bar">
+          <div class="name">Frontend</div>
+          <div class="meter" style="--w:85%"><i></i></div>
+        </div>
+
+        <div class="bar">
+          <div class="name">UI Design</div>
+          <div class="meter" style="--w:75%"><i></i></div>
+        </div>
+
+        <div class="bar">
+          <div class="name">Discord Bot</div>
+          <div class="meter" style="--w:80%"><i></i></div>
+        </div>
+
+        <div class="bar">
+          <div class="name">Automation</div>
+          <div class="meter" style="--w:70%"><i></i></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">© <span id="year"></span> • dibuat oleh Cyizzie</div>
+  </main>
+
+  <div class="toast" id="toast">OK</div>
+  <script src="assets/app.js"></script>
+</body>
+</html>
