--- a/about.html
+++ b/about.html
@@ -16,19 +16,36 @@
         <div class="logo"><span>🎀</span></div>
         <div>
           <div style="font-size:14px; opacity:.85;">Cyizzie — Personal Website</div>
-          <div style="font-size:12px; color:var(--muted); font-weight:800;">Welcome to my porto</div>
+          <div style="font-size:12px; color:var(--muted); font-weight:800;">Welcome to my Portofolio</div>
         </div>
       </a>
 
       <nav class="links" aria-label="Navigation">
-        <a class="chip" data-nav="home" href="index.html">Home</a>
-        <a class="chip" data-nav="projects" href="projects.html">Projects</a>
-        <a class="chip" data-nav="about" href="about.html">About</a>
-        <a class="chip" data-nav="contact" href="contact.html">Contact ✨</a>
+  <a class="chip" data-nav="home" href="index.html">Home</a>
+  <a class="chip" data-nav="projects" href="projects.html">Projects</a>
+  <a class="chip" data-nav="about" href="about.html">About</a>
+  <a class="chip primary" data-nav="contact" href="contact.html">Contact ✨</a>
 
-        <!-- Dark mode toggle -->
-        <button class="chip chip-toggle" id="themeToggle" type="button" aria-label="Toggle dark mode">🌙</button>
-      </nav>
+  <button class="chip chip-toggle" id="themeToggle" type="button" aria-label="Toggle dark mode">🌙</button>
+</nav>
+
+<!-- MOBILE ACTIONS -->
+<div class="m-actions" aria-label="Mobile actions">
+  <button class="m-btn" id="mTheme" type="button" aria-label="Toggle dark mode">🌙</button>
+  <button class="m-btn" id="mMenu" type="button" aria-label="Open menu">☰</button>
+</div>
+
+<!-- MOBILE DRAWER -->
+<div class="m-drawer" id="mDrawer" aria-hidden="true">
+  <div class="m-backdrop" data-close="m-drawer"></div>
+  <div class="m-panel" role="dialog" aria-modal="true" aria-label="Mobile menu">
+    <a class="m-link" href="index.html" data-nav="home">Home</a>
+    <a class="m-link" href="projects.html" data-nav="projects">Projects</a>
+    <a class="m-link" href="about.html" data-nav="about">About</a>
+    <a class="m-link primary" href="contact.html" data-nav="contact">Contact ✨</a>
+  </div>
+</div>
+
     </div>
   </header>
 
@@ -46,7 +63,14 @@
     </div>
 
     <div class="card fade-up" style="animation-delay:.10s">
-      <div class="bio">
+      <div class="bio with-pp">
+  <div class="pp-wrap">
+    <img src="assets/img/pp.jpg" alt="Foto profil Cyizzie" class="pp-img" />
+  </div>
+
+  <div class="bio-text">
+    <!-- isi paragraf bio kamu tetap di sini -->
+
         <p>
           Aku mahasiswa <b>Informatika</b> yang fokus pada pengembangan web dan UI.
           Aku suka bikin produk yang rapi secara struktur, tapi tetap lembut secara visual.
