--- a/index.html
+++ b/index.html
@@ -16,35 +16,55 @@
         <div class="logo"><span>🎀</span></div>
         <div>
           <div style="font-size:14px; opacity:.85;">Cyizzie — Personal Website</div>
-          <div style="font-size:12px; color:var(--muted); font-weight:800;">Welcome to my porto</div>
+          <div style="font-size:12px; color:var(--muted); font-weight:800;">Welcome to my Portofolio</div>
         </div>
       </a>
 
-      <nav class="links" aria-label="Navigation">
-        <a class="chip" data-nav="home" href="index.html">Home</a>
-        <a class="chip" data-nav="projects" href="projects.html">Projects</a>
-        <a class="chip" data-nav="about" href="about.html">About</a>
-        <a class="chip primary" data-nav="contact" href="contact.html">Contact ✨</a>
+<nav class="links" aria-label="Navigation">
+  <a class="chip" data-nav="home" href="index.html">Home</a>
+  <a class="chip" data-nav="projects" href="projects.html">Projects</a>
+  <a class="chip" data-nav="about" href="about.html">About</a>
+  <a class="chip primary" data-nav="contact" href="contact.html">Contact ✨</a>
 
-        <!-- Dark mode toggle -->
-        <button class="chip chip-toggle" id="themeToggle" type="button" aria-label="Toggle dark mode">
-          🌙
-        </button>
-      </nav>
-    </div>
+  <button class="chip chip-toggle" id="themeToggle" type="button" aria-label="Toggle dark mode">🌙</button>
+</nav>
+
+<!-- MOBILE ACTIONS -->
+<div class="m-actions" aria-label="Mobile actions">
+  <button class="m-btn" id="mTheme" type="button" aria-label="Toggle dark mode">🌙</button>
+  <button class="m-btn" id="mMenu" type="button" aria-label="Open menu">☰</button>
+</div>
+
+<!-- MOBILE DRAWER -->
+<div class="m-drawer" id="mDrawer" aria-hidden="true">
+  <div class="m-backdrop" data-close="m-drawer"></div>
+  <div class="m-panel" role="dialog" aria-modal="true" aria-label="Mobile menu">
+    <a class="m-link" href="index.html" data-nav="home">Home</a>
+    <a class="m-link" href="projects.html" data-nav="projects">Projects</a>
+    <a class="m-link" href="about.html" data-nav="about">About</a>
+    <a class="m-link primary" href="contact.html" data-nav="contact">Contact ✨</a>
+  </div>
+</div>
   </header>
 
   <main class="wrap">
     <div class="hero">
       <!-- HERO LEFT -->
       <div class="card fade-up">
-        <h1>
-          Halo, aku
-          <span class="grad-text">Cyizzie</span> 🌸
-        </h1>
+  <div class="hero-head">
+    <div class="hero-pp">
+      <img src="assets/img/pp.jpg" alt="Foto Cyizzie" />
+    </div>
+
+    <h1>
+      Halo, aku
+      <span class="grad-text">Cyizzie</span> 🌸
+    </h1>
+  </div>
+
 
         <p class="subtitle">
-          Portofolio ini menampilkan eksplorasi web, antarmuka pengguna, serta proyek digital yang dikembangkan dengan pendekatan sederhana, konsisten, dan bernuansa pastel yang lembut.
+          Portofoliofolio ini menampilkan eksplorasi web, antarmuka pengguna, serta proyek digital yang dikembangkan dengan pendekatan sederhana.
         </p>
 
         <div class="pill-row" aria-label="Focus areas">
@@ -87,7 +107,7 @@
         </div>
 
         <div class="muted-note">
-          Lagi fokus: portofolio + front-end + bot discord. Target: 1 project publish tiap minggu 🍬
+          Lagi fokus: Portofoliofolio + front-end + bot discord. Target: 1 project publish tiap minggu 🍬
         </div>
       </div>
     </div>
@@ -101,7 +121,7 @@
       <article class="proj">
         <span class="badge">🌙 Discord Bot</span>
         <h3>HOV Assistant</h3>
-        <p>Bot komunitas: welcome, ID card, role sorting, utilitas.</p>
+        <p>Bot komunitas Discord dengan fitur sambutan otomatis, kartu identitas pengguna, pengelolaan role, serta berbagai utilitas pendukung server.</p>
         <div class="row">
           <span class="tag">Node.js</span><span class="tag">discord.js</span><span class="tag">SQLite</span>
         </div>
@@ -110,7 +130,7 @@
       <article class="proj">
         <span class="badge">🍰 Web UI</span>
         <h3>Pastel Landing Page</h3>
-        <p>Landing page pastel dengan layout clean + animasi lembut.</p>
+        <p>Halaman landing bernuansa pastel dengan tata letak bersih, animasi halus, dan call-to-action yang terfokus.</p>
         <div class="row">
           <span class="tag">HTML</span><span class="tag">CSS</span><span class="tag">Responsive</span>
         </div>
@@ -137,10 +157,13 @@
         <div class="pill"><b>⚡</b> HTML</div>
         <div class="pill"><b>🎨</b> CSS</div>
         <div class="pill"><b>🧠</b> JavaScript</div>
-        <div class="pill"><b>🤖</b> discord.js</div>
+        <div class="pill"><b>🐘</b> PHP</div>
+        <div class="pill"><b>🐍</b> Python</div>
+        <div class="pill"><b>⚙️</b> Node.js</div>
+        <div class="pill"><b>🗄</b> MySQL</div>
         <div class="pill"><b>🗄</b> SQLite</div>
       </div>
-    </div>
+
 
     <div class="footer">© <span id="year"></span> • dibuat oleh Cyizzie</div>
   </main>
