--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Projects • Porto Lucu</title>
+  <title>Projects • Cyizzie</title>
   <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body data-page="projects">
@@ -15,41 +15,53 @@
         <div class="logo"><span>🎀</span></div>
         <div>
           <div style="font-size:14px; opacity:.85;">Cyizzie — Personal Website</div>
-          <div style="font-size:12px; color:var(--muted); font-weight:800;">Welcome to my porto</div>
+          <div style="font-size:12px; color:var(--muted); font-weight:800;">Welcome to my Portofolio</div>
         </div>
       </a>
-      <nav class="links">
-        <a class="chip" data-nav="home" href="index.html">Home</a>
-        <a class="chip" data-nav="projects" href="projects.html">Projects</a>
-        <a class="chip" data-nav="about" href="about.html">About</a>
-        <a class="chip primary" data-nav="contact" href="contact.html">Contact ✨</a>
+     <nav class="links" aria-label="Navigation">
+  <a class="chip" data-nav="home" href="index.html">Home</a>
+  <a class="chip" data-nav="projects" href="projects.html">Projects</a>
+  <a class="chip" data-nav="about" href="about.html">About</a>
+  <a class="chip primary" data-nav="contact" href="contact.html">Contact ✨</a>
 
-        <!-- Dark mode toggle -->
-        <button class="chip chip-toggle" id="themeToggle" type="button" aria-label="Toggle dark mode">
-          🌙
-        </button>
-      </nav>
+  <button class="chip chip-toggle" id="themeToggle" type="button" aria-label="Toggle dark mode">🌙</button>
+</nav>
+
+<!-- MOBILE ACTIONS -->
+<div class="m-actions" aria-label="Mobile actions">
+  <button class="m-btn" id="mTheme" type="button" aria-label="Toggle dark mode">🌙</button>
+  <button class="m-btn" id="mMenu" type="button" aria-label="Open menu">☰</button>
+</div>
+
+<!-- MOBILE DRAWER -->
+<div class="m-drawer" id="mDrawer" aria-hidden="true">
+  <div class="m-backdrop" data-close="m-drawer"></div>
+  <div class="m-panel" role="dialog" aria-modal="true" aria-label="Mobile menu">
+    <a class="m-link" href="index.html" data-nav="home">Home</a>
+    <a class="m-link" href="projects.html" data-nav="projects">Projects</a>
+    <a class="m-link" href="about.html" data-nav="about">About</a>
+    <a class="m-link primary" href="contact.html" data-nav="contact">Contact ✨</a>
+  </div>
+</div>
+
     </div>
   </header>
 
   <main class="wrap">
     <div class="card">
-      <h1>My Projects ✨</h1>
-      <p class="subtitle">
-       
-      </p>
+      <h1>Projects ✨</h1>    
     </div>
 
     <div class="section-title">
       <h2>Featured</h2>
-      <div class="hint">paling kamu banggakan</div>
+      <div class="hint">paling dibanggakan</div>
     </div>
 
     <div class="projects">
       <article class="proj">
         <span class="badge">🌙 Discord Bot</span>
-        <h3>HOV Assistant</h3>
-        <p>Welcome, ID card, role sorting, embed, utilitas.</p>
+        <h3>BOT Assistant</h3>
+        <p>Bot Community, welcome, ID card, role sorting, embed, utilitas.</p>
         <div class="row">
           <span class="tag">Node.js</span><span class="tag">discord.js</span><span class="tag">better-sqlite3</span>
           <a class="tag" href="#" onclick="toast('Ganti ke link GitHub / demo!');return false;">Live/Demo</a>
@@ -78,8 +90,59 @@
           <span class="tag">Automation</span>
         </div>
       </article>
-
     </div>
+
+    <div class="section-title">
+  <h2>Professional Experience</h2>
+  <div class="hint">analysis & documentation</div>
+</div>
+
+<div class="exp-full">
+  <article class="proj exp-card">
+    <span class="badge">📊 System Analysis</span>
+    <h3>Business Requirement & UML Documentation</h3>
+    <p>
+      Menyusun Business Requirement Statement (BRS) dan diagram UML selama program magang
+      di PT Bukit Asam Tbk (PTBA) pada unit Application Development & Services (EIS).
+    </p>
+
+    <div class="row">
+      <span class="tag">BRS</span>
+      <span class="tag">UML</span>
+      <span class="tag">Use Case</span>
+      <span class="tag">Activity Diagram</span>
+      <span class="tag">System Analysis</span>
+    </div>
+
+    <div class="media-grid">
+      <a href="assets/img/sertifikat-ptba.png" class="media-card" data-modal="image">
+        <div class="media-thumb">
+          <img src="assets/img/sertifikat-ptba.png" alt="Sertifikat Magang PT Bukit Asam Tbk (Nilai A)" />
+        </div>
+        <div class="media-meta">
+          <div class="media-title">Sertifikat</div>
+          <div class="media-sub"></div>
+        </div>
+      </a>
+
+      <a href="assets/img/nilai-intern-ptba.png" class="media-card" data-modal="image">
+        <div class="media-thumb">
+          <img src="assets/img/nilai-intern-ptba.png" alt="Penilaian Magang PT Bukit Asam Tbk" />
+        </div>
+        <div class="media-meta">
+          <div class="media-title">Penilaian</div>
+          <div class="media-sub">Internship</div>
+        </div>
+      </a>
+    </div>
+  </article>
+</div>
+
+
+</div>
+
+  </article>
+</div>
 
     <div class="section-title">
       <h2>More</h2>
@@ -95,12 +158,6 @@
           <span class="tag">Figma</span><span class="tag">Brand</span>
           <a class="tag" href="#" onclick="toast('Ganti ke link portfolio/dribbble!');return false;">Preview</a>
         </div>
-      </article>
-      <article class="proj">
-        <span class="badge">🧁 Mini Tool</span>
-        <h3>Random Cute Quote</h3>
-        <p>Generator quote lucu + tombol copy.</p>
-        <div class="row"><span class="tag">Vanilla JS</span></div>
       </article>
       <article class="proj">
         <span class="badge">🫧 UI</span>
@@ -120,6 +177,18 @@
   </main>
 
   <div class="toast" id="toast">OK</div>
+  <!-- Image Modal Preview -->
+  <div class="img-modal" id="imgModal" aria-hidden="true">
+    <div class="img-backdrop" data-close="modal"></div>
+
+    <figure class="img-dialog" role="dialog" aria-modal="true" aria-label="Image preview">
+      <button class="img-close" type="button" aria-label="Close preview" data-close="modal">✕</button>
+
+      <img id="imgModalSrc" src="" alt="" />
+      <figcaption id="imgModalCap" class="img-cap"></figcaption>
+    </figure>
+  </div>
+
   <script src="assets/app.js"></script>
 </body>
 </html>
